before user addition